fix(loader): increase z-index for loader component to ensure visibility

--- a/src/app/shared/components/loader/loader.component.scss
+++ b/src/app/shared/components/loader/loader.component.scss
@@ -1,4 +1,5 @@
 .fake-store-loader {
+  z-index: 999999999;
   position: absolute;
   top: 0;
   width: 100dvw;
